--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Hello there, awesome person!
 <html>
   
   <head>
-    <title>I am a title.</title>
+    <title>I am a title!</title>
   </head>
   
   <body>
