Added href links
Inserted <a> tags with href elements to create links

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ Hello there, awesome person!
     Hello there!
     
     <ol>
-      <li>w3schools.com</li>
-      <li>GitHub</li>
-      <li>Udemy</li>
+      <li><a href="https://w3schools.com">This is a link to w3schools!</a></li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
+      <li><a href="https://udemy.com">This is a link to Udemy!</a></li>
     </ol>
     
   </body>
